Docs: create documentation for auth
